--- a/nuget/XamEffects.nuspec
+++ b/nuget/XamEffects.nuspec
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <id>XamEffects</id>
-    <version>1.5.1</version>
-    <authors>Vladislav Zhukov</authors>
+    <id>XamEffectsTweaked</id>
+    <version>1.5.1.2</version>
+    <authors>Vladislav Zhukov, Kasper Overgård</authors>
     <owners>mrxten</owners>
     <licenseUrl>https://github.com/mrxten/XamEffects/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/mrxten/XamEffects</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Xamarin Forms effects for Android and iOS only.</description>
     <releaseNotes>Fix bugs, add fast clicking, add auto children transparent</releaseNotes>
-    <copyright>Copyright 2017</copyright>
+    <copyright>Copyright 2018</copyright>
     <tags>xamarin xamarin-forms effects</tags>
     <dependencies>
-      <dependency id="Xamarin.Forms" version="2.5.0.77107" />
+      <dependency id="Xamarin.Forms" version="3.1.0.697729" />
     </dependencies>
   </metadata>
 	<files>
